--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,41 @@
-fastapi>=0.95.0
-uvicorn>=0.21.1
-websockets>=11.0.2
-python-multipart>=0.0.6
-aiohttp>=3.8.4
-aiofiles>=23.1.0
-numpy>=1.24.2
-pydantic>=1.10.7
-python-dotenv>=1.0.0
-torch>=2.0.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.2.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+fastapi==0.115.11
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+h11==0.14.0
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+networkx==3.4.2
+numpy==2.2.3
+propcache==0.3.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+python-multipart==0.0.20
+requests==2.32.3
+setuptools==76.0.0
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.1
+sympy==1.13.1
+torch==2.6.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+webrtcvad==2.0.10
+websockets==15.0.1
+whisper==1.1.10
+yarl==1.18.3
